--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r req.txt
-      - name: Run Test
-        run: behave
+      - name: Run Behave Tests
+        run: |
+          export EDGE_DRIVER_PATH='msedgedriver.exe'
+          behave
+
