--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      EDGE_DRIVER_PATH: 'msedgedriver.exe'
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,6 +19,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r req.txt
+
+
+      - name: Set up EdgeDriver
+        run: |
+          EDGEDRIVER_VERSION=$(curl -sS https://msedgedriver.azureedge.net/LATEST_STABLE)
+          wget https://msedgedriver.azureedge.net/$EDGEDRIVER_VERSION/edgedriver_linux64.zip
+          unzip edgedriver_linux64.zip
+          chmod +x msedgedriver
+          sudo mv msedgedriver /usr/local/bin/
+          
       - name: Run Behave Tests
         run: |
           behave
