--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,34 +1,34 @@
-name: Python Selenium
+name: Build and Push Docker Image
 
 on:
   push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build Docker Image
+        run: |
+          docker buildx create --use
+          docker buildx inspect --bootstrap
+          docker buildx build --platform linux/amd64,linux/arm64 -t selenium_with_BDD:latest .
+        env:
+          DOCKER_CLI_EXPERIMENTAL: enabled
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          python-version: '3.x'
-          architecture: 'x64'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r req.txt
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-
-      - name: Set up EdgeDriver
-        run: |
-          wget https://msedgedriver.azureedge.net/118.0.2088.76/edgedriver_linux64.zip
-          unzip edgedriver_linux64.zip
-          chmod +x msedgedriver
-          sudo mv msedgedriver /usr/local/bin/
-
-      - name: Run Behave Tests
-        run: |
-          behave
-
+      - name: Push Docker Image
+        run: docker push selenium_with_BDD:latest
