--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx inspect --bootstrap
-          docker buildx build --no-cache --platform linux/amd64,linux/arm64 -t selenium_with_bdd .
+          docker buildx build --no-cache -t selenium_with_bdd .
         env:
           DOCKER_CLI_EXPERIMENTAL: enabled
 
