--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,22 +14,22 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: actions/checkout@v3
 
-      - name: Build Docker Image
-        run: |
-          docker buildx create --use
-          docker buildx inspect --bootstrap
-          docker buildx build --no-cache -t selenium_with_bdd .
-          docker buildx tag selenium_with_bdd:latest rake5h/selenium_with_bdd
-        env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
+      
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+
+      - name: Build Docker Image
+        run: |
+          docker build --no-cache -t selenium_with_bdd .
+        env:
+          DOCKER_CLI_EXPERIMENTAL: enabled
 
       - name: Run Test
         run: docker run -t selenium_with_bdd:latest
